--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -1,9 +1,80 @@
+---
+title: "TRENDS DRAFT"
+output: 
+  flexdashboard::flex_dashboard:
+    logo: phs-logo.png
+    orientation: rows
+    vertical_layout: scroll
+---
+
+```{r load-setup, include=FALSE}
+source(here::here("code", "00_setup-environment.R"))
+library(crosstalk) # for drop down menus
+
+# Write numbers with thousands separator
+knit_hooks$set(inline = function(x){
+  if(!is.character(x)){prettyNum(x, big.mark=",")}else{x}
+})
+```
+
+---
+date: "`r paste('Data as at', format(end_date, '%d %B %Y'))`"
+---
+
+```{r setup, include=FALSE}
+
+# Remove tidylog
+detach("package:tidylog", unload = TRUE)
+
+# Load functions
+walk(dir(here::here("functions"), full.names = TRUE), source)
+
+# Load PDS data
+pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
+  
+  # Remove codes from board and IJB
+  mutate(health_board = str_sub(health_board, 3, -1),
+         ijb          = if_else(is.na(ijb),
+                                "Unknown",
+                                str_sub(ijb, 11, -1)))
+
+# Load expected diagnoses reference file
+exp <- read_csv(get_exp_diagnoses_path())
+
+
+# Load error summary
+err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_output)) %>% 
+
+  mutate(ijb = if_else(is.na(ijb),
+                                "Unknown",
+                                str_sub(ijb, 11, -1)))
+```
+<!-- delete all of above when finished tetsing -->
+
 Trends
 =================================================
 
-```{r summary figures, include=FALSE}
+```{r data setup, include=FALSE}
+# to be automated based on whether current year is complete or not??
+#included_years <- c("2016/17", "2017/18", "2018/19", "2019/20", "2020/21", "2021/22", "2022/23", "2023/24")
 
+#prepare data for plot_yearly_referrals() function
+pds_ijb <- pds %>% arrange(ijb)
 
+pds_scot <- pds %>% group_by(health_board = "Scotland", ijb = "Scotland", fy, month, ldp, age_grp, simd) %>% 
+  summarise(referrals = sum(referrals), .groups = "drop")
+
+pds_hb <- pds %>% group_by(health_board, fy, month, ldp, age_grp, simd) %>% 
+  summarise(referrals = sum(referrals), .groups = "drop") %>% mutate(ijb = health_board, .before = fy)
+
+pds_all <- bind_rows(pds_scot, pds_hb, pds_ijb)
+
+pds_all$ijb <- factor(pds_all$ijb, levels = unique(pds_all$ijb))
+
+pds_all %<>% group_by(ijb, fy) %>% summarise(total_referrals = sum(referrals))
+
+# assigns data to filter_select in sidebar
+pds_trends_data <- SharedData$new(pds_all)
    
  
 ```
@@ -12,16 +83,39 @@ Trends
 Sidebar {.sidebar}
 -----------------------------------------------------------------------
 
-
-
 ### 
 
-Select health board/Integration Authority Area
+<font size="2"> 
+<span style="color:red"> 
+**MANAGEMENT INFORMATION ONLY:** <br>
+**NOT FOR ONWARD DISTRIBUTION**
+</span> </font>
 
-```{r dropdown, results='asis'}
+***
+
+```{r dropdown}
+data_filter_hb_ijb <- filter_select(id = "trend_filter",
+                                    label = "Select Health Board or Integration Authority Area:",
+                                    group = ~ijb,
+                                    sharedData = pds_trends_data
+                                   )
+data_filter_hb_ijb
 
 ```
 
+```{js}
+function filter_default() {
+    document.getElementById("trend_filter").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Scotland", false);
+
+  document.getElementById("trend_filter").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  }
+  
+  window.onload = filter_default;
+
+```
 
 ***
 
@@ -33,29 +127,60 @@ Row
 
 ### **Note**
 
+**Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.**
 
 
 Row {.data-height=1000}
 ----------------------------------------------------------------------
 
-### **Trend plot** {data-width=800}
+### **Number of Individuals referred to Post-Diagnostic Support by Financial Year** {data-width=800}
 
 ```{r trend-plot}
 
-
+trends_plot <- plot_yearly_referrals(pds_trends_data)
+trends_plot
 
 ```
 
 
-Row 
+Row {.tabset data-height=750}
 ----------------------------------------------------------------------
 
-### **trend table**
+### **Scotland/Health Board - Number of Individuals referred to Post-Diagnostic Support by Financial Year**
 
-```{r trend-table}
+```{r trend-table-hb}
 
+pds_all %>% filter(ijb == "Scotland" | grepl("NHS", ijb)) %>% 
+            mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
+            pivot_wider(names_from = fy, values_from = total_referrals) %>%
+            rename(`Health Board` = ijb) %>%
+            kable() %>%
+            kable_styling(full_width = FALSE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table 
+            add_header_above(
+                    c(" " = 1,
+                     "Financial Year of Diagnosis" = 9)) 
 
 ```
 
+### **Scotland/Integration Authority Area - Number of Individuals referred to Post-Diagnostic Support by Financial Year**
 
+```{r trend-table-ijb}
+
+pds_all %>% filter(ijb == "Scotland" | !grepl("NHS", ijb)) %>% 
+            mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
+            pivot_wider(names_from = fy, values_from = total_referrals) %>% 
+            rename(`Integration Authority Area` = ijb) %>%
+            kable() %>%
+            kable_styling(full_width = FALSE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table 
+            add_header_above(
+                       c(" " = 1,
+                         "Financial Year of Diagnosis" = 9)) %>%
+            scroll_box(height = "740px")
+ 
+
+```
 
